# terminaft

./: .gitignore  CMakeLists.txt  main.cpp
braille/: canvas.h  dots.cpp  dots.h
graphics/: renderer.h  texture.h
input/: event.h  input.h
math/: 3d.h  common.h
tui/: char.h  color.h  object.h  plates.h  utf8.h  utils.cpp  utils.h  view_port.cpp  view_port.h
